--- a/Romanian/main/PowerKeeper.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/PowerKeeper.apk/res/values-ro/arrays.xml
@@ -83,4 +83,12 @@
         <item>selectate</item>
         <item>neselectate</item>
     </string-array>
+    <string-array name="thermal_entries">
+        <item>Mod implicit control încălzire</item>
+        <item>Mod prioritate performanță</item>
+    </string-array>
+    <string-array name="thermal_summaries">
+        <item>În modul curent de control al temperaturii, se preferă o temperatură joasă a telefonului</item>
+        <item>În modul curent de prioritate pentru performanță, temperatura poate atinge valori ridicate</item>
+    </string-array>
 </resources>
