--- a/Romanian/main/SecurityCenter.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/SecurityCenter.apk/res/values-ro/arrays.xml
@@ -28,29 +28,11 @@
         <item>Astăzi (Wi-Fi)</item>
         <item>Această lună (Wi-Fi)</item>
     </string-array>
-    <string-array name="date_of_app">
-        <item>Ieri (date)</item>
-        <item>Astăzi (date)</item>
-        <item>Această lună (date)</item>
-    </string-array>
-    <string-array name="network_speed_update_internals">
-        <item>3 secunde</item>
-        <item>4 secunde</item>
-        <item>5 secunde</item>
-        <item>6 secunde</item>
-        <item>7 secunde</item>
-        <item>8 secunde</item>
-        <item>9 secunde</item>
-    </string-array>
     <string-array name="traffic_type">
         <item>"Utilizare date mobile "</item>
         <item>"Utilizare Wi-Fi "</item>
     </string-array>
     <string-array name="mi_service_traffic_type">
-        <item>"Utilizare date mobile "</item>
-        <item>"Utilizare Wi-Fi "</item>
-    </string-array>
-    <string-array name="traffic_sort_type">
         <item>"Utilizare date mobile "</item>
         <item>"Utilizare Wi-Fi "</item>
     </string-array>
@@ -68,23 +50,25 @@
         <item>Când telefonul este blocat sau după ieșirea din aplicație</item>
         <item>Când telefonul este blocat sau după un minut de la părăsirea aplicației</item>
     </string-array>
-    <string-array name="long_add_menu">
-        <item>Adăugați în lista excepțiilor</item>
-    </string-array>
     <string-array name="sort_type">
-        <item>Sortare după nume</item>
-        <item>Sortare după mărime</item>
+        <item>Stare</item>
+        <item>Numele aplicației</item>
+        <item>Frecvența utilizării</item>
+        <item>Spațiul utilizat</item>
+        <item>Utilizarea datelor</item>
+        <item>Utilizarea acumulatorului</item>
+    </string-array>
+    <string-array name="sort_title">
+        <item>Sortare după stare</item>
+        <item>Sortare după numele aplicației</item>
+        <item>Sortare după frecvența utilizării</item>
+        <item>Sortare după spațiul utilizat</item>
+        <item>Sortare după utilizarea datelor</item>
+        <item>Sortare după utilizarea acumulatorului</item>
     </string-array>
     <string-array name="sms_report_type">
         <item>Utilizare date</item>
         <item>Balanță telefon</item>
-    </string-array>
-    <string-array name="power_dialog_auto_clean_memory_items">
-        <item>După un minut</item>
-        <item>După 5 minute</item>
-        <item>După 10 minute</item>
-        <item>După 30 de minute</item>
-        <item>Niciodată</item>
     </string-array>
     <string-array name="alarm_repeat_type">
         <item>O dată</item>
