--- a/Romanian/main/Settings.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/plurals.xml
@@ -8,6 +8,10 @@
         <item quantity="other">%s aplicații pot afișa notificări</item>
         <item quantity="one">1 aplicație poate afișa notificări</item>
     </plurals>
+    <plurals name="settings_toggle_position_divider_page">
+        <item quantity="other">%1$d comutatoare de deasupra barei sunt active</item>
+        <item quantity="one">1 comutator de deasupra barei este activ</item>
+    </plurals>
     <plurals name="show_dev_countdown">
         <item quantity="other">Mai aveți de parcurs %1$d pași pentru a deveni dezvoltator.</item>
         <item quantity="one">Mai aveți de parcurs %1$d pas pentru a deveni dezvoltator.</item>
