--- a/Romanian/main/SecurityCenter.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/SecurityCenter.apk/res/values-ro/plurals.xml
@@ -112,15 +112,15 @@ Dacă activați din nou datele mobile, operatorul vă poate taxa pentru trafic s
     </plurals>
     <plurals name="result_virus_header">
         <item quantity="other">S-au găsit %d viruși și aplicații nesigure</item>
-        <item quantity="one">S-a găsit o aplicație virusată</item>
+        <item quantity="one">S-a găsit %d aplicație virusată</item>
     </plurals>
     <plurals name="result_sign_header">
         <item quantity="other">S-au găsit %d aplicații neoficiale</item>
-        <item quantity="one">S-a găsit o aplicație neoficială</item>
+        <item quantity="one">S-a găsit %d aplicație neoficială</item>
     </plurals>
     <plurals name="sp_settings_exception_count">
         <item quantity="other">%d elemente</item>
-        <item quantity="one">1 element</item>
+        <item quantity="one">%d element</item>
     </plurals>
     <plurals name="sp_monitored_apps_count">
         <item quantity="other">%s aplicații de plăți sunt protejate</item>
@@ -262,5 +262,13 @@ Dacă activați din nou datele mobile, operatorul vă poate taxa pentru trafic s
     <plurals name="app_usage_year">
         <item quantity="other">Utilizată cu %d ani în urmă</item>
         <item quantity="one">Utilizată cu %d an în urmă</item>
+    </plurals>
+    <plurals name="install_game_count_title">
+        <item quantity="other">Au fost adăugated %d jocuri</item>
+        <item quantity="one">A fost adăugat %d joc</item>
+    </plurals>
+    <plurals name="uninstall_game_count_title">
+        <item quantity="other">"Nu s-au adăugat %d jocuri"</item>
+        <item quantity="one">"Nu s-a adăugat %d joc"</item>
     </plurals>
 </resources>
