--- a/Romanian/main/Settings.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/arrays.xml
@@ -1541,6 +1541,7 @@ Notă: Doar pentru Ubuntu 8.04!"</item>
         <item>Fișiere</item>
         <item>Notițe</item>
     </string-array>
+    <array name="app_permission" />
     <string-array name="standard_configuration_version">
         <item>3 GB</item>
         <item>32 GB</item>
